FWF-3333:[bugfix] Resolved alignment issues   - Table alignment issues in Forms page   - Table alignment issues in Submissions table.

--- a/forms-flow-theme/scss/_table.scss
+++ b/forms-flow-theme/scss/_table.scss
@@ -24,6 +24,7 @@ $table-variants: (
   th {
     border-bottom: 0;
     vertical-align: middle !important;
+    padding: 1.5rem 1.5rem !important;
   }
 
   tr {
